<package format="3">
  <name>my_planner_tools</name>
  <version>0.0.1</version>
  <description>Example node to test xarm_ros2</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>xarm_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
